--- a/src/scss/_riders-almanac.scss
+++ b/src/scss/_riders-almanac.scss
@@ -25,6 +25,11 @@
 		margin-top: 10px;
 	}
 
+	h2.moduletitle.blogtitle {
+		float: right;
+		width: 78%;
+	}
+
 	#ctl00_mainContent_BlogView1_navBottom_pnlCategories {
 	    margin-top: -95px;
 	}
